<resources>
    <string name="app_name">Aves</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_add_observation">Add Observation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_lightSensorDemo">Light Sensor Demo</string>
    <string name="avatar_description">Avatar</string>
    <string name="real_name">Real Name</string>
    <string name="user_name">Username</string>
    <string name="friends">My Friends</string>
    <string name="my_observations">My Observations</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="edit_avatar">Click to upload new</string>
    <string name="hint_bird_name">Bird name</string>
    <string name="hint_description">Description</string>
    <string name="lbl_location">Location: %1$s</string>
    <string name="lbl_description">A small blue bird</string>
    <string name="lbl_btn_add_observation">Add observation</string>
    <string name="lbl_weather_data">Weather data: %1s</string>
    <string name="str_done">Done!</string>
    <string name="str_retrieving">Retrieving…</string>
    <string name="str_not_permitted">Not enabled in Aves settings.</string>
    <string name="txt_light">It is bright where you are</string>
    <string name="txt_dark">You are in the dark</string>
    <string name="image_of_observation">Image of observation</string>
    <string name="aves_logo">Aves logo</string>
    <string name="aves">Aves</string>
    <string name="menu">Menu</string>
    <string name="blue_tit">Blue Tit</string>
    <string name="sat_19th_april_2020_17_08">Sat 19th April 2020 17:08</string>
    <string name="loc_123_332_23_334">Loc: -123.332, 23.334</string>
    <string name="cloud_cover_23">Cloud cover: 23%</string>
    <string name="rain_4_mm">Rain: 4 mm</string>
    <string name="wind_12_mps">Wind: 12 mps</string>
    <string name="pressure_1015_4_hpa">Pressure: 1015.4 hPa</string>
    <string name="text_new_bird">New Discovery!</string>
    <string name="txt_your_statistics">Your Statistics</string>
    <string name="txt_total_sightings">Total Sightings: </string>
    <string name="txt_most_frequent">Most Frequent Sighting: </string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="example_text">Example text</string>
    <string name="search_by_name">Search by name:</string>
    <string name="search_for_a_bird">Search for a bird</string>
    <string name="temperature_14_4_c">Temperature: 14.4°C</string>
    <string name="your_observations">Your observations:</string>
    <string name="number_of_birds_seen">Number of birds seen</string>
</resources>
