<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dest_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/dest_observation"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/nav_camera" />
        <item
            android:id="@+id/dest_add_observation"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/nav_add_observation" />
        <item
            android:id="@+id/dest_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/dest_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>
</menu>