<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#292929">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/view_observation_image"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:src="@drawable/ic_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/view_observation_image"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_birdName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:text="@string/hint_bird_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:text="42069xxx"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view_description"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_description" />

                <TextView
                    android:id="@+id/view_location"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/lbl_location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view_cloudiness"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/cloud_cover_23" />

                <TextView
                    android:id="@+id/view_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/pressure_1015_4_hpa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view_rain"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/rain_4_mm"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/view_wind"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/wind_12_mps" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>