<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="ntnu20.imt3673.group4.aves.viewmodels.AddObservationViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddObservationFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_view_observation"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="16dp"
                    android:src="@{@drawable/ic_image}"
                    android:contentDescription="@string/image_of_observation" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_gallery"
                        android:layout_width="61dp"
                        android:layout_height="57dp"
                        android:background="@drawable/ic_gallery"/>

                    <Button
                        android:id="@+id/btn_capture"
                        android:layout_width="61dp"
                        android:layout_height="57dp"
                        android:background="@drawable/ic_camera_alt_black_24dp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp">

                    <EditText
                        android:id="@+id/txt_bird_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/hint_bird_name"
                        android:hint="@string/hint_bird_name"
                        android:inputType="textAutoComplete"
                        android:text="@={vm.birdName}" />

                    <EditText
                        android:id="@+id/txt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/hint_description"
                        android:hint="@string/hint_description"
                        android:inputType="textAutoComplete"
                        android:text="@={vm.description}" />

                    <EditText
                        android:id="@+id/txt_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="1"
                        android:hint="@string/number_of_birds_seen"
                        android:inputType="number"
                        android:text="@={vm.count}" />

                    <TextView
                        android:id="@+id/txt_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{@string/lbl_location(vm.location)}"
                        android:textColor="@{vm.gotLocation ? @android:color/holo_green_dark : @android:color/holo_red_dark}"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_weather"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{vm.gotWeather ? @string/lbl_weather_data(@string/str_done) : @string/lbl_weather_data(@string/str_retrieving)}"
                        android:textColor="@{vm.gotWeather ? @android:color/holo_green_dark : @android:color/holo_red_dark}"
                        android:textSize="18sp" />

                </LinearLayout>



                <Button
                    android:id="@+id/btn_add_observation"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.validated}"
                    android:text="@string/lbl_btn_add_observation"/>
            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>